# alec-nrf9151-demo

./: CoAP-UDP config.txt  README.md
backend/: README.md  docker-compose.yml
backend/decoder/: Cargo.toml  Dockerfile
backend/decoder/src/: main.rs
backend/grafana/dashboards/: alec-demo.json
backend/mosquitto/: mosquitto.conf
backend/prometheus/: prometheus.yml
firmware/: CMakeLists.txt  prj.conf
firmware/lib/alec/: CMakeLists.txt
firmware/lib/alec/include/: alec.h
firmware/src/: critical_section.c  main.c
